--- a/.github/workflows/build-toc.yml
+++ b/.github/workflows/build-toc.yml
@@ -13,6 +13,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       # 1. Check out the repository code
       - name: Checkout repo
