--- a/.github/workflows/build-toc.yml
+++ b/.github/workflows/build-toc.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+        
+      - uses: docker://pandoc/core:3.5
 
       - name: Build HTML files from Markdown
         run: |
